--- a/vue-interface/package.json
+++ b/vue-interface/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "fs": "0.0.1-security",
+    "node-omxplayer": "^0.6.1",
     "vue": "^2.6.11",
     "vuetify": "^2.2.11"
   },
