--- a/vue-interface/package.json
+++ b/vue-interface/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "fs": "0.0.1-security",
     "node-omxplayer": "^0.6.1",
+    "play-sound": "^1.1.3",
     "vue": "^2.6.11",
     "vuetify": "^2.2.11"
   },
