--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs": "0.0.1-security",
     "path": "^0.12.7",
     "play-sound": "^1.1.3",
+    "speaker": "^0.5.2",
     "ytdl-core": "^4.1.0"
   }
 }
