--- a/vue-interface/package.json
+++ b/vue-interface/package.json
@@ -12,6 +12,7 @@
     "fs": "0.0.1-security",
     "node-omxplayer": "^0.6.1",
     "play-sound": "^1.1.3",
+    "speaker": "^0.5.2",
     "vue": "^2.6.11",
     "vuetify": "^2.2.11"
   },
