--- a/vue-interface/package.json
+++ b/vue-interface/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "fs": "0.0.1-security",
+    "minimp3": "^1.0.0",
     "node-omxplayer": "^0.6.1",
     "play-sound": "^1.1.3",
     "speaker": "^0.5.2",
