--- a/vue-interface/package.json
+++ b/vue-interface/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "HOST='0.0.0.0' PORT=80 npm run dev"
+    "start": "HOST='0.0.0.0' PORT=80 npm run serve"
   },
   "dependencies": {
     "core-js": "^3.6.5",
